# GOT

./: .gitignore  LICENSE  README.md
pytracking/: .gitignore  cotracker2  evaluate_GOT_Edit_results.py  evaluate_GOT_JEPA_results.py  evaluate_PiVOT_results.py  heatmap.py  install_PiVOT.sh  install_gojepa.sh  install_gotedit.sh
pytracking/ltr/: run_training.py  run_training_dsA.py  streamvggt
pytracking/ltr/Depth-Anything-3/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/: api.py  cli.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/app/: gradio_app.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/app/modules/: event_handlers.py  model_inference.py  ui_components.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/model/: da3.py  dualdpt.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/model/dinov2/: vision_transformer.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/model/utils/: head_utils.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/services/: inference_service.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/utils/: alignment.py  constants.py  geometry.py
pytracking/ltr/Depth-Anything-3/src/depth_anything_3/utils/export/: npz.py
pytracking/ltr/StreamVGGT/: LICENSE.txt  README.md  demo_gradio.py  requirements.txt  requirements_demo.txt
pytracking/ltr/actors/: tracking.py
pytracking/ltr/admin/: multigpu.py
pytracking/ltr/cotracker2/: .gitignore
pytracking/ltr/data/: loader.py  processing.py  processing_utils.py  sampler.py  transforms.py
pytracking/ltr/dataset/: __init__.py  coco_seq.py  got10k.py  lasot.py  vasttrack.py
pytracking/ltr/profiling/: profile_tomp_components.py  profile_tomp_components_PT.py
pytracking/ltr/trainers/: __init__.py  base_trainer.py  base_trainer_dsA_magav1.py  base_trainer_dsA_magav1_ori.py  ltr_trainer.py  ltr_trainer_dsA_magav1.py  ltr_trainer_dsA_magav1_ori.py  ltr_trainer_maga.py
pytracking/ltr/vggt/: .gitignore
pytracking/pytracking/: README.md  heatmap.py  run_experiment.py  run_tracker.py  run_vot.py
(+276 files in other folders)
